k8s/rfid-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rfid-gateway-service
spec:
  type: ClusterIP
  selector:
    app: rfid-gateway
  ports:
    - name: http
      port: 3001
      targetPort: 3001
