k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-attendance-web-service
spec:
  type: ClusterIP
  selector:
    app: school-attendance-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
    - name: metrics
      port: 9090
      targetPort: 3000
